# rust_frakt

./: .gitignore  Cargo.toml  Documentation_Groupe.md  Documentation_groupe.md  README.md
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: main.rs
complex/: Cargo.toml
complex/src/: complex.rs
message/: Cargo.toml
message/src/: build_fractale.rs  build_julia.rs  build_mandelbrot.rs  drawing_image.rs  fragment_result.rs  img.rs  iterated_sin_z.rs  julia.rs  lib.rs  mandelbrot.rs  message.rs  newton.rs  newton_raphson_z.rs  nova_newton_raphson.rs  send_message.rs  sin_z.rs
server/: Cargo.toml
server/src/: drawing_image.rs  fragment_task.rs  main.rs  thread_pool_server.rs
