[package]
name = "server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message = { path = "../message"}
complex = { path = "../complex"}
serde = { version= "1", features=["derive"] }
serde_json = "1"
image = { version = "0.24.7", features = [] }
